--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="app">
+      <div name="details">
+        <h5 name="about"><b>ChatS - Your AI by Snehasish Mallik!</b></h5>
+      </div>
       <div id="chat_container"></div>
 
       <form>
